@@ -327,7 +327,7 @@ module StateMachine
         
         # Adds hooks into validation for automatically firing events
         def define_action_helpers
-          if super && action == :save
+          if super(:create_or_update) && action == :save
             @instance_helper_module.class_eval do
               define_method(:valid?) do |*args|
                 self.class.state_machines.fire_attribute_events(self, :save, false) { super(*args) }
