@@ -1,5 +1,6 @@
 == master
 
+* Fix #save! not firing event attributes properly in ActiveRecord integrations
 * Fix log files being included in gems
 
 == 0.7.3 / 2009-04-25
